# NOTE: No multi-line configs permitted!
# https://github.com/pypa/setuptools/issues/1390
[metadata]
name = kheops-client
version = attr: kheops_client.__version__
url = https://github.com/hirsch-lab/kheops-client
license = MIT
license_file = LICENSE
description = Utility for querying and downloading data from a Kheops DICOM database
long_description = file: README.md
long_description_content_type = text/markdown
author = Norman Juchler
keywords = kheops, client, dicom, DICOMWeb
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Internet
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
setup_requires = setuptools>=46.4.0
python_requires = >=3.6
install_requires =
    pandas>=1.1             # Data analysis library
    pydicom>=2.1            # DICOM data structure for python
    dicomweb_client>=0.52   # DICOMWeb API client
    progressbar2

[options.entry_points]
console_scripts =
    kheops-client = kheops_client.__main__:main
